# depotd

./: .gitignore  Cargo.toml  LICENSE  README.md  depotd.toml.example
src/: api.rs  auth.rs  config.rs  main.rs  storage.rs
