[package]
name = "depotd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
daemonize = "0.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
md5 = "0.7"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
hyper = { version = "1.0", features = ["full"] }
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
url = "2.5"
